--- a/style1.css
+++ b/style1.css
@@ -48,6 +48,7 @@ h2, p {
   box-shadow: 0px 6px 12px 0px rgba(0,0,0,0.2);
   z-index: 100;
   overflow: visible;
+  background-color: white;
 }
 
 .test img {
@@ -107,7 +108,7 @@ button {
   cursor: pointer;
 }
 
-#mem_button {
+#mem_button1, #mem_button2, #mem_button3, #mem_button4 {
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   width: 100%;
   border-radius: 20px;
@@ -138,10 +139,68 @@ button {
 } 
 
 .side {
-  width: 30%;
+  width: 25%;
 }
 
 .about {
+  display: block;
+  box-shadow: rgba(149, 157, 165, 0.5) 0px 8px 24px;
+  margin: 100px 10px 30px 30px;
+  border: solid white 1px;  
+  border-radius: 20px;
+  z-index: 10;
+  padding-top: 48px;
+  padding-left: 48px;
+  padding-right: 48px;
+  padding-bottom: 18px;
+  height: auto;
+} 
+
+#personal_about1 {
+  display: none;
+  box-shadow: rgba(149, 157, 165, 0.5) 0px 8px 24px;
+  margin: 100px 30px 30px 30px;
+  border: solid white 1px;  
+  border-radius: 20px;
+  z-index: 10;
+  padding-top: 48px;
+  padding-left: 48px;
+  padding-right: 48px;
+  height: auto;
+} 
+
+#personal_about2 {
+  display: none;
+  box-shadow: rgba(149, 157, 165, 0.5) 0px 8px 24px;
+  margin: 100px 30px 30px 30px;
+  border: solid white 1px;  
+  border-radius: 20px;
+  z-index: 10;
+  padding-top: 48px;
+  padding-left: 48px;
+  padding-right: 48px;
+  height: auto;
+} 
+
+#personal_about3 {
+  display: none;
+  box-shadow: rgba(149, 157, 165, 0.5) 0px 8px 24px;
+  margin: 100px 10px 30px 30px;
+  border: solid white 1px;  
+  border-radius: 20px;
+  z-index: 10;
+  height: auto;
+} 
+
+#personal_about3 img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
+}
+
+#personal_about4 {
+  display: none;
   box-shadow: rgba(149, 157, 165, 0.5) 0px 8px 24px;
   margin: 100px 30px 30px 30px;
   border: solid white 1px;  
@@ -155,7 +214,7 @@ button {
 
 .members {
   box-shadow: rgba(149, 157, 165, 0.5) 0px 8px 24px;
-  margin: 50px 30px 30px 30px;
+  margin: 30px 10px 30px 30px;
   border: solid white 1px;  
   border-radius: 20px;
   z-index: 10;
@@ -170,7 +229,8 @@ button {
   display: none;
   font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
   padding-top: 48px;
-  padding-left: 64px;
+  padding-left: 48px;
+  padding-right: 16px;
 }
 
 .header {
@@ -182,6 +242,12 @@ button {
   line-height: 1.3;
   font-size: 22px;
   margin-top: 32px;
+  margin-bottom: 32px;
+}
+
+.start_desc {
+  margin-left: 48px;
+  font-size: 22px;
   margin-bottom: 32px;
 }
 
@@ -316,8 +382,6 @@ li {
 }
 
 .grid-container {
-  display: grid;
-  grid-template-columns: 7fr 1fr;
   gap: 50px;
   margin-right: 64px;
   margin-bottom: 32px;
@@ -327,7 +391,7 @@ li {
   margin-top: 32px;
   margin-bottom: 64px;
   display: grid;
-  grid-template-columns: 6fr 4fr 6fr;
+  grid-template-columns: 3fr 6fr 3fr;
 }
 
 .grid-container2 {
@@ -351,7 +415,7 @@ li {
   margin-bottom: 64px;
   display: grid;
   grid-template-columns: 3fr 3fr 3fr; 
-  gap: 50px;
+  row-gap: 50px;
 }
 
 .grid-container5 {
@@ -442,7 +506,7 @@ li {
 
 .box1, .box2, .box3, .box4, .box5, .box6, .box7, .box8, .box9, .box10, .box11, .box12, .box13, .box14, .box15, .box16, .box17, .box18, .box19, .box20, .box21, .box22 {
   /* Base styles */
-  margin-right: 64px; 
+  margin-right: 32px; 
   padding: 10px;  
   border: none;
   border-radius: 8px; 
@@ -743,7 +807,7 @@ body.dark-mode .theme-toggle {
   color: white;
 }
 
-body.dark-mode #mem_button {
+body.dark-mode #mem_button1, body.dark-mode #mem_button2, body.dark-mode #mem_button3, body.dark-mode #mem_button4 {
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   width: 100%;
   border-radius: 20px;
