--- a/style1.css
+++ b/style1.css
@@ -104,7 +104,7 @@ button {
   display: inline-block;
   font-size: 24px;
   margin: 4px 2px;
-  transition-duration: 0.5s;
+  transition-duration: 0.3s;
   cursor: pointer;
 }
 
@@ -153,7 +153,6 @@ button {
   padding-left: 48px;
   padding-right: 48px;
   padding-bottom: 18px;
-  height: auto;
 } 
 
 #personal_about1 {
@@ -196,7 +195,8 @@ button {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 40%;
+  width: 50%;
+  border-radius: 10px;
 }
 
 #personal_about4 {
@@ -824,7 +824,7 @@ body.dark-mode #personal_about1,
 body.dark-mode #personal_about2, 
 body.dark-mode #personal_about3, 
 body.dark-mode #personal_about4 {
-  border: solid 1px;
+  border: solid black 1px;
 }
 
 .theme-toggle:hover {
