--- a/main-page-styles.css
+++ b/main-page-styles.css
@@ -1,9 +1,17 @@
 body{
     margin:0px;
-    background-image: url(images/world-map.png);
-    background-size: cover;
 }
 
+.background-video{
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
+    
+}
 a{
     text-decoration: none;
     color: rgba(253, 247, 231, 0.822);
@@ -122,6 +130,7 @@ button:active{
 .side-content-area{
     display:none;
     width: 200px;
+    height: 447px;
     flex-shrink: 0;
     padding: 10px;
     color: white ;
@@ -131,9 +140,58 @@ button:active{
 
 .side-panel-open .side-content-area{
     display: initial; 
+    visibility: visible;
 }
 
 .side-panel-open .side-panel-toggle{
     display: initial;
+    visibility: visible;
 }
 
+.side-content-area{
+    visibility: hidden;
+    display: flex;
+    height: 100%;
+}
+
+.video-selection{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    height: 50vh;
+    overflow-y: scroll;
+    overflow-x:hidden
+}
+
+.volume-adjust{
+    height: 13%;
+}
+
+.video-row{
+    min-height: 13vh;
+    display: flex;
+    flex-direction: row;
+
+}
+.video-item-container{
+    margin: 2px;
+    height: 80%;
+    width: 50%;
+    padding: 2px;
+}
+.video-item{
+    gap: 10px 10px 10px 0px;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    margin: 2px 0px 0px 2px;
+    border-radius: 5px;
+}
+
+.video-title{
+    font-size: 14px;
+    margin: 0px;
+}
+::-webkit-scrollbar{
+    display:none;
+}
