--- a/style1.css
+++ b/style1.css
@@ -9,7 +9,7 @@ body {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   display: flex;
   flex-direction: row;
-  height: 100vh;
+  height: 100%;
 }
 
 .start p {
