--- a/style1.css
+++ b/style1.css
@@ -7,26 +7,23 @@ body {
 
 .main {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  display: flex;
-  flex-direction: row;
-  height: 100%;
-}
-
-.start p {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  font-size: 24px;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  margin-right: 30px;
+  margin-bottom: 30px;
 }
 
 .start {
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 24px;
 }
 
 html { 
   scroll-behavior: smooth;
   overflow: scroll;
+  height: 100%;
 }
 
 h1 {
@@ -60,6 +57,7 @@ h2, p {
 }
 
 .desc {
+  grid-column: 1 / span 2;
   background-image: url('images/bg2.jpg');
   width: 100%;
   height: 50%;
@@ -130,34 +128,38 @@ button {
 .text {
   box-shadow: rgba(149, 157, 165, 0.5) 0px 8px 24px;
   border-radius: 20px;
-  margin: 100px 30px 30px 30px;
+  margin-top: 100px;
   flex: 70%;
   width: 100%;
   z-index: 10;
   word-wrap: break-word;
   overflow-wrap: break-word;
   overflow: auto;
-  max-height: 85vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 } 
 
 .side {
-  width: 25%;
+  display: grid;
+  margin-top: 100px;
+  margin-left: 30px;
+  margin-right: 30px;
+  margin-bottom: 0;
+  grid-template-rows: 6fr 4fr;
+  row-gap: 30px;
 }
 
 .about {
-  display: block;
   box-shadow: rgba(149, 157, 165, 0.5) 0px 8px 24px;
-  margin: 100px 10px 30px 30px;
   border-radius: 20px;
   z-index: 10;
   padding-left: 48px;
   padding-right: 48px;
   padding-top: 48px;
-  padding-bottom: 36px;
 } 
 
-#about_desc {
-  display: inline-block;
+#about_desc .description {
 }
 
 #personal_about1 {
@@ -217,14 +219,11 @@ button {
 
 .members {
   box-shadow: rgba(149, 157, 165, 0.5) 0px 8px 24px;
-  margin: 32px 10px 0px 30px; 
   border-radius: 20px;
   z-index: 10;
-  padding-top: 20px;
   padding-left: 30px;
   padding-right: 30px;
-  padding-bottom: 20px;
-  height: auto;
+  margin-top: 20px;
 } 
 
 .article {
@@ -486,7 +485,8 @@ li {
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   background-color: rgba(128, 128, 128, 0.2);
   /* 1. Container Styling: Use flexbox/grid for layout, add padding */
-  padding: 40px 20px; /* Add internal spacing */
+  padding-top: 40px; /* Add internal spacing */
+  padding-bottom: 40px;
   color: black; /* Light text for readability on dark background */
   text-align: center; /* Center content if it's a simple, single line */
 }
