--- a/main-page/main-page-styles.css
+++ b/main-page/main-page-styles.css
@@ -2,6 +2,7 @@ body{
     margin:0px;
 }
 
+/*Ensures video plays as a background*/
 .background-video{
     position: fixed;
     right: 0;
@@ -18,26 +19,7 @@ a{
     font-size: 20px;
 }
 
-.navigation{
-    margin:auto;
-    padding: 15px;
-    border-radius: 10px;
-}
-
-.navigation:hover {
-    cursor: pointer;
-    color: black;
-    background-color: rgb(145,196,195 );
-}
-
-.navigation-bar{
-    display:flex;
-    justify-content: space-between;
-    height: 70px;
-    margin: 0;
-}
-
-
+/*Header seperation style*/
 .left-column{
     display: flex;
     width: 20%;
@@ -46,7 +28,6 @@ a{
     justify-content: space-around;
 
 }
-
 .right-column{
     background-color: rgb(128, 161, 186);
     border-radius: 10px;
@@ -64,8 +45,26 @@ a{
     border-width: 5px;
     
 }
+/*Top right navigation bar styles*/
+.navigation{
+    margin:auto;
+    padding: 15px;
+    border-radius: 10px;
+}
+.navigation:hover {
+    cursor: pointer;
+    color: black;
+    background-color: rgb(145,196,195 );
+}
+.navigation-bar{
+    display:flex;
+    justify-content: space-between;
+    height: 70px;
+    margin: 0;
+}
 
-#content{
+
+.main-content-area{
     display: flex;
 }
 
@@ -80,36 +79,30 @@ button:active{
 .wrapper{
     display:flex;
     flex-direction: row;
-    width: 30%;
+    width: auto;
     margin-left:10px;
     margin-top: 10px;
+
 }
 
 .side-nav-bar{
     display: flex;
     flex-direction: column;
+    flex-shrink: 0;
     justify-content: space-around;
-    width: 20%;
+    width: 70px;
     height: 60vh;
     border-radius: 10px;
     background-color: rgb(128, 161, 186);
 }
 
 .main-content-area{
-    height: 87vh;
-    width: 50%;
-    margin-left: 20px;
-}
-
-.side-content-area{
-    margin-left: 8px;
-    flex-grow: 1;
-    padding:10px;
-    border-radius: 10px 0px 0px 10px;
+    height: 85.2vh;
+    width: 100%;
+    margin-left: 15px;
 }
 
 .side-panel-toggle{
-    display:none;
     width: min-content;
     height: auto;
     flex-shrink: 0;
@@ -131,4 +124,27 @@ button:active{
     margin: 0px;
     font-size: 25px;
     margin-left: 4px;
+}
+
+.side-content-area{
+    width: auto;
+    height: auto;
+    display: flex;
+}
+
+.content-area{
+flex-shrink: 0;
+color: white ;
+background-color:rgb(128, 161, 186) ;
+box-shadow: 0 0 10px rgba(0, 0, 0, 0.35);
+margin: 0px;
+margin-left: 8px;
+flex-grow: 1;
+padding:10px;
+border-radius: 10px 0px 0px 10px;
+display: none;
+}
+
+#MusicToggleButton{
+    display: none;
 }
