--- a/main-page/main-page-styles.css
+++ b/main-page/main-page-styles.css
@@ -1,7 +1,10 @@
+
+
 body{
     margin:0px;
 }
-
+audio{
+}
 /*Ensures video plays as a background*/
 .background-video{
     position: fixed;
@@ -13,6 +16,8 @@ body{
     z-index: -1;
 }
 a{
+    font-family: 'Nunito', sans-serif;
+    font-weight: bold;
     text-decoration: none;
     color: rgba(253, 247, 231, 0.822);
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -93,7 +98,7 @@ button:active{
     width: 70px;
     height: 60vh;
     padding: 5px;
-    border-radius: 10px;
+    border-radius: 15px;
     background-color: rgb(128, 161, 186);
 }
 
@@ -104,8 +109,9 @@ button:active{
 }
 
 .side-panel-toggle{
+    margin-top: 40px;
     width: min-content;
-    height: auto;
+    height: 60px;
     flex-shrink: 0;
     place-items: center;
     color:rgba(8, 89, 165, 0.5);
@@ -136,14 +142,16 @@ button:active{
 .content-area{
 flex-shrink: 0;
 color: white ;
-background-color:rgb(128, 161, 186) ;
+background-color:rgb(18, 87, 139) ;
 box-shadow: 0 0 10px rgba(0, 0, 0, 0.35);
 margin: 0px;
 margin-left: 8px;
 flex-grow: 1;
 padding:10px;
-border-radius: 10px 0px 0px 10px;
+border-radius: 15px;
 display: none;
+font-family: 'Nunito', sans-serif;
+font-weight: bold;
 }
 
 #MusicToggleButton{
