--- a/main-page/spaces-side-panel-styles.css
+++ b/main-page/spaces-side-panel-styles.css
@@ -43,14 +43,21 @@
     gap: 10px 10px 10px 0px;
     align-items: center;
     height: 100%;
-    width: 100%;
+    width: 95%;
     margin: 2px 0px 0px 2px;
     border-radius: 5px;
+    border: none;
+    transition: transform 0.3s ease;
 }
 
+.video-item:hover{
+    cursor: pointer;
+    transform: scale(1.05);
+}
 .video-title{
     font-size: 14px;
     margin: 0px;
+    margin-left: 7px;
 }
 ::-webkit-scrollbar{
     display:none;
