--- a/main-page/main-page-styles.css
+++ b/main-page/main-page-styles.css
@@ -32,21 +32,28 @@ a{
 
 }
 .right-column{
+    margin-top: 2vh;
     background-color: rgb(128, 161, 186);
     border-radius: 10px;
-    width: 40%;
-    margin-right: 30px;
+    padding: 0.1em;
+    min-width: min-content;
+    width: 30vw;
+    margin-right: min(3vw, 1%);
     display: flex;
     flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
+    justify-content: space-evenly;;
 }
 
 /*Top right navigation bar styles*/
 .navigation{
-    margin:auto;
-    padding: 15px;
+    margin: 0vw, 3vw, 0vw, 3vw;
+    padding: 10px;
     border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 2em;
 }
 .navigation:hover {
     cursor: pointer;
@@ -56,8 +63,14 @@ a{
 .navigation-bar{
     display:flex;
     justify-content: space-between;
-    height: 70px;
     margin: 0;
+}
+.material-symbols-outlined{
+    font-size: clamp(1vw,2vw,2.5rem)!important;
+}
+.nav-description{
+    font-size: clamp(0.3rem,0.5rem,1rem);
+    margin-top: 0.1rem;
 }
 
 
@@ -68,11 +81,12 @@ a{
 button:active{
     background-color: red;
 }
-.world-map{
-    width: 100%;
-    height: 100%;
-}
 
+.main-content-area{
+    margin-top: 2vh;
+    height: 85.2vh;
+    width: 100%;
+}
 .wrapper{
     display:flex;
     flex-direction: row;
@@ -87,17 +101,12 @@ button:active{
     flex-direction: column;
     flex-shrink: 0;
     justify-content: space-around;
-    width: 70px;
+    min-width: min-content;
+    width: 4vw;
     height: 60vh;
-    padding: 5px;
+    padding: 0.5vw;
     border-radius: 15px;
     background-color: rgb(128, 161, 186);
-}
-
-.main-content-area{
-    height: 85.2vh;
-    width: 100%;
-    margin-left: 15px;
 }
 
 .side-panel-toggle{
@@ -163,4 +172,11 @@ font-weight: bold;
 
 #MusicToggleButton{
     display: none;
+}
+
+.side-button{
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    margin: 10px 0px;
 }
