--- a/main-page/music-side-panel-styles.css
+++ b/main-page/music-side-panel-styles.css
@@ -54,30 +54,32 @@
     font-weight: bold;
 }
 
+
 audio::-webkit-media-controls-panel{
-    background-color: cornflowerblue;
+    background-color: rgba(60, 68, 81);
 }
 audio::-webkit-media-controls-play-button{
-    background-color: lightblue;
+    background-color: rgba(91, 97, 106, 0.709);
     border-radius: 50%;
 }
 audio::-webkit-media-controls-current-time-display{
-    color: #333;
+    color: rgba(255, 255, 255, 0.843);
 }
 audio::-webkit-media-controls-time-remaining-display{
-    color: #333;
+    color: rgba(255, 255, 255, 0.843);
 }
 audio::-webkit-media-controls-timeline{
     border-radius: 40px;
-    background-color: lightblue;
+    background-color: rgba(91, 97, 106, 0.709);
 }
 audio::-webkit-media-controls-volume-slider{
-    background-color: lightblue;
+    background-color: rgba(91, 97, 106, 0.709);
     border-radius: 50px;
     padding-left: 10px;
     padding-right: 10px;
 }
 audio::-webkit-media-controls-mute-button{
-    background-color: lightblue;
+    background-color: rgba(91, 97, 106, 0.709);
     border-radius: 50%;
 }
+
