--- a/todo/index.css
+++ b/todo/index.css
@@ -1,5 +1,6 @@
 html{
 	font-family: "Plus Jakarta Sans",system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	scrollbar-color: rgba(255, 255, 255, 0.2) rgba(0, 0, 0, 0);
 }
 
 p{
@@ -11,44 +12,14 @@ body{
 	height: 100%;
 	margin: 0;
 }
-.top-nav{
-	display: flex;
-	background: #B4DEBD;
-	grid-row: 1/2;
-	grid-column: 1/3;
-}
-
-.top-navbar{
-	list-style-type: none;
-	display:flex;
-	justify-content: space-between;
-	align-items: center;
-	padding:0;
-	margin:0;
-	width: 100%;
-}
-.profile{
-	display:flex;
-	align-items: center;
-	margin-left:20px;
-	gap: 10px;
-}
-.profile > img{
-	height:45px;
-	border-radius: 50%;
-}
-.nav-links{
-	display:flex;
-}
-
 .left-nav{
 	display:flex;
 	flex-direction: column;
-	grid-row: 2/3;
-	grid-column: 1/2;
 	padding: 40px 30px;
+	flex-basis:300px;
 	background-color: rgb(34, 40, 48);
 	color:rgba(253, 247, 231, 0.822);
+	overflow-y: auto;
 }
 .tasks-text{
 	margin:0;
@@ -64,6 +35,7 @@ body{
 	margin:0;
 }
 .list-item{
+	position: relative;
 	border-radius: 10px;
 	color: rgba(253, 247, 231, 0.822);
 	width: 200px;
@@ -80,6 +52,10 @@ body{
 }
 .list-item:hover{
 	color: #4e5b59b2;
+}
+.list-item:hover > .setting{
+	visibility: visible;
+	opacity: 1;
 }
 .tasks-num{
 	font-size: 12px;
@@ -142,13 +118,15 @@ li a:hover{
 	border:none;
 	overflow: hidden;
 	padding:10px;
+	border-radius:15px;
 	transition: background 0.5s ease-in-out;
 }
 .title:hover{
-	background-color:#ddeaea;
+	background-color: rgb(50, 58, 70);
 	border-radius:15px;
 }
 .title:focus{
+	background-color: rgb(50, 58, 70);
 	outline: none;
 }
 .notes{
@@ -165,11 +143,6 @@ li a:hover{
 	border-radius: 26px;
 	box-shadow: 0px 6px 12px 0px rgba(0,0,0,0.2);
 }
-.notes:hover{
-	border: 2px solid #5f857a;
-	cursor:text;
-}
-
 .plus_more{
 	min-width: 250px;
 	height:250px;
@@ -194,6 +167,7 @@ li a:hover{
 	justify-content: flex-start;
 	overflow-y: auto;
 	gap:20px;
+	scrollbar-width: thin;
 }	
 .garbage{
 	position:absolute;
@@ -220,27 +194,17 @@ li a:hover{
 	background:transparent;
 	white-space: pre-wrap;
 	overflow-wrap: break-word;
+	scrollbar-width: thin;
 }
-
-.jam:hover{
-	cursor:pointer;
-}
-
-.settings{
-	visibility: hidden;
-}
-.not-started-child:hover > .settings{
-	visibility: visible;	
-}
-.settings:hover{
-	cursor:pointer;
-}
-
-.done-but:hover{
-	cursor: pointer;
-}
-.not-but:hover{
-	cursor: pointer;
+/* .text_box::-webkit-scrollbar{ */
+/* 	width:12px; */
+/* 	height:12px; */
+/* } */
+/* .text_box::-webkit-scrollbar-track{ */
+/* 	background-color:rgba(255, 255, 255, 0.2) rgba(0, 0, 0, 0); */
+/* } */
+.text_box::-webkit-scrollbar-button{
+	display:none;
 }
 .garbage-tooltip{
 	visibility: hidden;
@@ -259,6 +223,24 @@ li a:hover{
 	font-size: 13px;
 	color: #bdb7bc;
 	opacity:1;
+}
+.selected{
+	color: #4e5b59b2;
+}
+.setting{
+	visibility: hidden;
+	opacity: 0;
+	transition: opacity 0.3s ease-in;
+}
+.setting > svg{
+	position:absolute;
+	bottom: -12px;
+	height: 22px;
+	right: -15px;
+}
+.setting:hover{
+	cursor:pointer;
+	animation: wobble 0.4s ease;
 }
 @keyframes wobble {
   0%   { transform: rotate(0deg); }
