added profile/logout/new navbar/light dark mode

--- a/todo/index.css
+++ b/todo/index.css
@@ -2,24 +2,75 @@ html{
 	font-family: "Plus Jakarta Sans",system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	scrollbar-color: rgba(255, 255, 255, 0.2) rgba(0, 0, 0, 0);
 	height: 100%;
+	--text-color: rgba(253, 247, 231, 0.822);
 }
-
+html[data-theme="dark"]{
+	scrollbar-color: rgba(255, 255, 255, 0.2) rgba(0, 0, 0, 0);
+	--text-color: rgba(253, 247, 231, 0.822);
+	--main-container: rgb(60, 68, 81);
+	--left-nav: rgb(34, 40, 48);
+	--list-hover: #4e5b59b2;
+	--task-num: #80808029;
+	--new-list: #4e5b59;
+	--new-list-hover: #4e5b59b2;
+	--li_a: #bdb7bc;
+	--li_a_hover: #fffafe;
+	--title_hover: rgb(50, 58, 70);
+	--title_focus: rgb(50, 58, 70);
+	--notes-border: 1px solid rgba(255,255,255,0.04);
+	--notes-background: rgb(88, 96, 109);
+	--notes-shadow: 0 8px 24px rgba(0,0,0,0.35);
+	--notes-hover: rgb(92, 100, 114);
+	--plus_more: #8080805e;
+	--selected: #4e5b59b2;
+	--right-nav: rgb(34, 40, 48);
+	--right-ul-li-hover: rgba(81, 80, 81);
+	--right-ul-li: white;
+	--emoji-color: rgba(255, 255, 255, 0.843);
+}
+html[data-theme="light"]{
+	scrollbar-color: rgba(255, 255, 255, 0.2) rgba(0, 0, 0, 0);
+	--text-color: rgb(74, 58, 41);
+	--main-container: rgb(245, 240, 230);
+	--left-nav: rgb(255, 250, 245);
+	--list-hover: rgb(105, 140, 160);
+	--task-num: rgba(105, 140, 160, 0.1);
+	--new-list: #4e5b59;
+	--new-list-hover: #4e5b59b2;
+	--li_a: #bdb7bc;
+	--li_a_hover: #fffafe;
+	--title_hover: rgb(230, 225, 215);
+	--title_focus: rgb(230, 225, 215);
+	--notes-border: ;
+	--notes-background: rgb(255, 255, 255);
+	--notes-shadow: 0 8px 24px rgba(0,0,0,0.15);
+	--notes-hover: rgb(248, 248, 248);
+	--plus_more: rgba(105, 140, 160, 0.15);
+	--selected: ;
+	--right-nav: rgb(255, 250, 245);
+	--right-ul-li-hover: rgb(235, 230, 220);
+	--right-ul-li: rgb(74, 58, 41);
+	--emoji-color: rgb(74, 58, 41);
+}
+.material-symbols-outlined {
+  font-size: clamp(1vw,2vw,2.5rem) !important;
+  color: var(--emoji-color);
+}
 p{
 	margin:0;
 }
 body{
 	display:flex;
-	background-color: #EBF5FB;
 	height: 100%;
 	margin: 0;
 }
 .left-nav{
 	display:flex;
 	flex-direction: column;
-	padding: 40px 30px;
+	padding: 40px 30px 20px 30px;
 	flex-basis:300px;
-	background-color: rgb(34, 40, 48);
-	color:rgba(253, 247, 231, 0.822);
+	background: var(--left-nav);
+	color:var(--text-color);
 	overflow-y: auto;
 }
 .tasks-text{
@@ -38,9 +89,10 @@ body{
 .list-item{
 	position: relative;
 	border-radius: 10px;
-	color: rgba(253, 247, 231, 0.822);
+	color: var(--text-color);
 	width: 200px;
 	text-decoration: none;
+	font-size: 20px;
 	margin-top: 20px;
 	display:flex;
 	align-items: center;
@@ -52,7 +104,7 @@ body{
 	margin-left: auto;
 }
 .list-item:hover{
-	color: #4e5b59b2;
+	color: var(--list-hover);
 }
 .list-item:hover > .setting{
 	visibility: visible;
@@ -61,7 +113,7 @@ body{
 .tasks-num{
 	font-size: 12px;
 	display: flex;
-	background-color: #80808029;
+	background-color: var(--task-num);
 	align-items:center;
 	justify-content: center;
 	width: 30px;
@@ -77,14 +129,14 @@ body{
 	display: flex;
 	margin-top: 20px;
 	align-items: center;
-	color: #4e5b59;
+	color: var(--new-list);
 	word-spacing: 4px;
 }
 .new-list:hover{
-	color: #4e5b59b2;
+	color: var(--new-list-hover);
 }
 li a{
-	color:#bdb7bc;
+	color:var(--li_a);
 	font-weight: 400;
 	font-size: 16px;
 	text-align: center;
@@ -94,12 +146,12 @@ li a{
 }
 
 li a:hover{
-	color:#fffafe;
+	color:var(--li_a_hover);
 }
 .main-container{
 	display: flex;
 	overflow:hidden;
-	background-color: rgb(60, 68, 81);
+	background: var(--main-container);
 	flex-direction: column;
 	align-items: center;
 	width: 100%;
@@ -109,7 +161,7 @@ li a:hover{
 
 .title{
 	align-self: flex-start;
-	color: rgba(253, 247, 231, 0.822);
+	color: var(--text-color);
 	font-weight: bold;
 	font-size: 35px;
 	margin-top: 20px;
@@ -123,30 +175,52 @@ li a:hover{
 	transition: background 0.5s ease-in-out;
 }
 .title:hover{
-	background-color: rgb(50, 58, 70);
+	background-color: var(--title_hover);
 	border-radius:15px;
 }
 .title:focus{
-	background-color: rgb(50, 58, 70);
+	background-color: var(--title_focus);
 	outline: none;
 }
 .notes{
 	display: flex;
+	flex-direction:column;
 	position: relative;
 	min-width: 250px;
-	height:250px;
+	height:333px;
 	justify-content: center;
 	align-items: center;
-	background-color:#78a491;
+	background-color: var(--notes-background);
 	filter: brightness(150%);
-	padding: 60px;
+	padding: 20px 60px;
 	text-align: center;
 	border-radius: 26px;
 	box-shadow: 0px 6px 12px 0px rgba(0,0,0,0.2);
+	border: var(--notes-border);
+	box-shadow: var(--notes-shadow);
+	transition: transform 140ms ease,background-color 140ms ease;
 }
 .notes:hover{
-        border: 2px solid #c9d7cb;
         cursor:text;
+	transform: translateY(4px);
+	background: var(--notes-hover);
+}
+.notes:hover > div > .garbage{
+	visibility: visible;
+	opacity:1;
+}
+.note-header{
+	width:250px;
+	font-family: "Caveat";
+	resize:none;
+	background: transparent;
+	align-self: flex-start;
+	border: none;
+	font-weight: bold;
+	font-size: 25px;
+}
+.note-header:focus{
+	outline: none;
 }
 .plus_more{
 	min-width: 250px;
@@ -155,7 +229,7 @@ li a:hover{
 	padding: 60px;
 	justify-content: center;
 	align-items: center;
-	background-color: #8080805e;
+	background-color: var(--plus_more);
 	border-radius: 26px;
 	box-shadow: 0px 6px 12px 0px rgba(0,0,0,0.2);
 	transition: margin 0.5s ease;
@@ -175,10 +249,13 @@ li a:hover{
 	scrollbar-width: thin;
 }	
 .garbage{
+	visibility: hidden;
 	position:absolute;
 	bottom:15px;
 	height: 24px;
 	right:10px;
+	opacity: 0;
+	transition: opacity 200ms ease-in;
 }
 .garbage:hover{
 	cursor:pointer;
@@ -189,8 +266,12 @@ li a:hover{
 .text_box:focus{
 	outline: none;
 }
+.text_box::placeholder{
+	color: rgba(38, 28, 4, 0.9);
+}
 
 .text_box{
+	font-family: "Inter";
 	font-size: 16px;
 	width:250px;
 	height:250px;
@@ -201,13 +282,6 @@ li a:hover{
 	overflow-wrap: break-word;
 	scrollbar-width: thin;
 }
-/* .text_box::-webkit-scrollbar{ */
-/* 	width:12px; */
-/* 	height:12px; */
-/* } */
-/* .text_box::-webkit-scrollbar-track{ */
-/* 	background-color:rgba(255, 255, 255, 0.2) rgba(0, 0, 0, 0); */
-/* } */
 .text_box::-webkit-scrollbar-button{
 	display:none;
 }
@@ -230,7 +304,7 @@ li a:hover{
 	opacity:1;
 }
 .selected{
-	color: #4e5b59b2;
+	color: var(--selected);
 }
 .setting{
 	visibility: hidden;
@@ -246,6 +320,62 @@ li a:hover{
 .setting:hover{
 	cursor:pointer;
 	animation: wobble 0.4s ease;
+}
+.right-nav{
+	position: fixed;
+	top: 350px;
+	right: -99px;
+	background-color: var(--right-nav);
+	border-radius: 10px;
+	transition: right 0.5s ease-out;
+}
+.right-nav:hover{
+	right:-18px;
+}
+.right-ul{
+	display:flex;
+	flex-direction: column;
+	margin: 0;
+	padding: 10px;
+	gap: 20px;
+}
+.right-ul > li{
+	list-style-type: none;
+}
+.right-ul-li{
+	list-style-type: none;
+	display: flex;
+	gap: 15px;
+	align-items: center;
+	color: var(--right-ul-li);
+}
+.right-ul-li:hover{
+	background-color:var(--right-ul-li-hover);
+	border-radius: 10px;
+}
+.profile > a{
+	display:flex;
+	text-decoration: none;
+	align-items: center;
+	color: var(--text-color);
+	gap: 20px;
+}
+.profile >a > img {
+	height :45px;
+	border-radius:50%;
+	object-fit:cover;
+}
+.logout{
+	text-decoration:none;
+	color:var(--text-color);
+	display:flex;
+	align-items:center;
+	gap: 15px;
+	margin-bottom: 30px;
+	transition: margin 500ms ease-in;
+}
+.logout:hover{
+	margin-left: 10px;
 }
 @keyframes wobble {
   0%   { transform: rotate(0deg); }
