--- a/login/login.css
+++ b/login/login.css
@@ -4,13 +4,6 @@
 	--primary-color: #A0E7F0;
 	font-family: "Plus Jakarta Sans",system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-video{
-	position: fixed;
-	right: 0;
-	bottom: 0;
-	min-width: 100%;
-	min-height: 100%;
-}
 body{
 	display:flex;
 	flex-direction: column;
@@ -21,8 +14,10 @@ body{
 	background-repeat: no-repeat;
 	height:100vh;
 	margin:0;
+	overflow-x:hidden;
 }
 .main-container{
+	position:relative;
 	display: flex;
 	box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 	border-radius: 25px;
@@ -84,6 +79,7 @@ body{
 	gap: 5px;
 }
 .input-div > input{
+	position:relative;
 	height: 30px;
 	box-shadow: inset 0 0 10px rgba(255, 255, 255, 0.05);
 	padding: 10px 10px 3px 10px;
@@ -93,11 +89,6 @@ body{
 	width: 350px;
 	color: var(--text-color);
 	transition: background 0.5s ease;
-}
-.input-div > span{
-	position: absolute;
-	top: 17px;
-	right: 15px;
 }
 .input-div > input:focus {
 	outline: none;
@@ -159,8 +150,94 @@ body{
 label{
 	font-size: 14px;
 }
+.error{
+	display:none;
+	background-color: #ff00002b;
+	color: red;
+	border-radius: 5px;
+	padding: 10px;
+	opacity:0;
+	max-height:0px;
+	transition: opacity 500ms ease-in;
+}
+.show{
+	opacity: 1;
+	max-height: 40px;
+}
+.wrong{
+	border: 1px outset red !important;
+	border-color: red !important;
+}
+.eye{
+	position:absolute;
+	top: 37px;
+	right: 4px;
+}
+.eye:hover{
+	cursor:pointer;
+	animation: wobble 0.4s ease;
+}
+.register-modal{
+	display:none;
+	justify-content: center;
+	align-items:center;
+	background-color: rgba(0,0,0,0.4);
+	z-index: 1;
+	position: fixed;
+	left: 0px;
+	top: 0px;
+	width:100%;
+	height: 100%;
+}
+.register-form{
+	display:flex;
+	flex-direction:column;
+	align-items:center;
+	gap: 30px;
+	background-color: #EBF5FB;
+	padding: 50px;
+	border-radius: 105px;
+	min-width: 0;
+}
+.margin-top{
+	margin-top: 30px;
+}
+.register-text{
+	display:flex;
+	align-items: center;
+}
+.register_input_div{
+	flex-grow:0;
+	max-width: 377px;
+}
+.register_input_div > p{
+	margin: 0;
+	word-break:break-word;
+	overflow-wrap: break-word;
+}
 @media only screen and (max-width: 1000px){
 	.left-container{
 		display: none;
 	}
+}
+@media only screen and (max-width: 400px){
+	input{
+		width: 230px !important;
+	}
+	.register-form{
+		padding: 20px;
+		width: 90%;
+		max-width:300px;
+	}
+}
+.register_error{
+	display:none;
+	align-items:flex-start;
+	color:red;
+}
+@keyframes wobble {
+  0%   { transform: rotate(0deg); }
+  40%  { transform: rotate(10deg); }
+  70%  { transform: rotate(-10deg); }
+  100% { transform: rotate(0deg); }
 }
