--- a/main-page/main-page-styles.css
+++ b/main-page/main-page-styles.css
@@ -25,17 +25,24 @@ a{
 
 .right-column{
     position:fixed;
-    right: 0px;
-    top: -27px;
+    right: 25px;
+    top: -37px;
     background-color: rgb(34, 40, 48);
     border-radius: 0px 0px 7px 7px;
     height: max-content;
-    min-width: min-content;
+    width: 420px;
     margin-right: min(3vw, 1%);
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     transition: top 0.5s ease-out;
+}
+
+@media screen and (max-width: 450px) {
+    .right-column{
+        width: 380px;
+        right: 0px;
+    }
 }
 
 .right-column:hover{
@@ -70,7 +77,7 @@ a{
     
 }
 .nav-description{
-    font-size: clamp(0.3rem,0.7rem,1rem);
+    font-size: clamp(0.3rem,0.9rem,1rem);
     margin-bottom: 0.3rem;
     color: rgba(255, 255, 255, 0.843);
     padding-top: 10px;
@@ -109,6 +116,27 @@ button:hover{
     padding: 0.5vw;
     border-radius: 7px;
     background-color: rgb(34, 40, 48);
+}
+
+@media screen and (max-width: 450px) {
+    .side-nav-bar{
+        width: 1vw;
+        height: 400px;
+    }
+    .side-button{
+        margin: 0px!important;
+    }
+    .nav-description{
+        font-size: 10px;
+    }
+    #SpacesContent{
+        width: 300px!important;
+        height: auto!important;
+    }
+    #Music{
+        width: 320px!important;
+        height: auto!important;
+    }
 }
 
 .side-panel-toggle{
