--- a/login/login.css
+++ b/login/login.css
@@ -12,7 +12,7 @@ body{
 	background-image: url(../assets/bg.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
-	height:100vh;
+	min-height:100vh;
 	margin:0;
 	overflow-x:hidden;
 }
@@ -21,6 +21,8 @@ body{
 	display: flex;
 	box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 	border-radius: 25px;
+	max-width: 1000px;
+	width: 100%;
 	min-height: 700px;
 	height: auto;
 	margin: 50px;
@@ -30,11 +32,12 @@ body{
 .left-container{
 	display:flex;
 	position: relative;
-	width: 500px;
+	flex: 1;
 	flex-direction: column;
 }
 .left-container > img {
-	height: 700px;
+	height: 100%;
+	width: 100%;
 	border-top-left-radius: 25px;
 	border-bottom-left-radius: 25px;
 }
@@ -48,7 +51,7 @@ body{
 	font-family: "Kode Mono";
 }
 .right-container{
-	width: 500px;
+	flex:1;
 	padding: 25px;
 	display:flex;
 	background-color: #EBF5FB;
@@ -65,6 +68,7 @@ body{
 	font-size: 30px;
 	color: #43b1ca;
 	margin-bottom: 70px;
+	text-align:center;
 }
 #login{
 	display:flex;
@@ -86,6 +90,7 @@ body{
 	background: transparent;
 	border-style: none;
 	border-bottom: 1px outset #e8cece4f;
+	/* width: 100%; */
 	width: 350px;
 	color: var(--text-color);
 	transition: background 0.5s ease;
@@ -216,19 +221,24 @@ label{
 	word-break:break-word;
 	overflow-wrap: break-word;
 }
-@media only screen and (max-width: 1000px){
+@media screen and (max-width: 900px){
+	.main-container{
+		min-height:auto;
+	}
 	.left-container{
 		display: none;
 	}
+	.right-container{
+		flex-grow: 1 1 80%;
+		width:100%;
+	}
 }
-@media only screen and (max-width: 400px){
+@media only screen and (max-width: 450px){
 	input{
 		width: 230px !important;
 	}
 	.register-form{
-		padding: 20px;
-		width: 90%;
-		max-width:300px;
+		flex: 1 1 100%;
 	}
 }
 .register_error{
@@ -240,7 +250,6 @@ label{
 	position: absolute;
 	top: 53px;
 	right: 40px;
-	background-color: #fffcfc8a;
 	border-radius: 30px;
 	cursor: pointer;
 }
