--- a/todo/index.css
+++ b/todo/index.css
@@ -19,15 +19,16 @@ html[data-theme="dark"]{
 	--title_hover: rgb(50, 58, 70);
 	--title_focus: rgb(50, 58, 70);
 	--notes-border: 1px solid rgba(255,255,255,0.04);
-	--notes-background: rgb(88, 96, 109);
-	--notes-shadow: 0 8px 24px rgba(0,0,0,0.35);
-	--notes-hover: rgb(92, 100, 114);
+	--notes-hover: rgb(85, 95, 110);
 	--plus_more: #8080805e;
 	--selected: #4e5b59b2;
 	--right-nav: rgb(34, 40, 48);
 	--right-ul-li-hover: rgba(81, 80, 81);
 	--right-ul-li: white;
 	--emoji-color: rgba(255, 255, 255, 0.843);
+	--text_box_placeholder: rgba(126, 117, 98, 0.9);
+	--text_box: white;
+	--note-header: white;
 }
 html[data-theme="light"]{
 	scrollbar-color: rgba(105, 140, 160, 0.5) rgba(255, 250, 245);
@@ -55,7 +56,6 @@ html[data-theme="light"]{
 	--emoji-color: rgb(74, 58, 41);
 }
 .material-symbols-outlined {
-  font-size: clamp(1vw,2vw,2.5rem) !important;
   color: var(--emoji-color);
 }
 p{
@@ -70,7 +70,8 @@ body{
 	display:flex;
 	flex-direction: column;
 	padding: 40px 30px 20px 30px;
-	flex-basis:300px;
+	flex-shrink:0;
+	flex-basis:250px;
 	background: var(--left-nav);
 	color:var(--text-color);
 	overflow-x:hidden;
@@ -192,7 +193,7 @@ li a:hover{
 	font-weight: bold;
 	font-size: 35px;
 	margin-top: 20px;
-	width:50%;
+	width:75%;
 	background:transparent;
 	resize: none;
 	border:none;
@@ -224,7 +225,6 @@ li a:hover{
 	border-radius: 26px;
 	box-shadow: 0px 6px 12px 0px rgba(0,0,0,0.2);
 	border: var(--notes-border);
-	box-shadow: var(--notes-shadow);
 	transition: transform 140ms ease,background-color 140ms ease;
 }
 .notes:hover{
@@ -245,6 +245,7 @@ li a:hover{
 	border: none;
 	font-weight: bold;
 	font-size: 25px;
+	color:var(--note-header);
 }
 .note-header:focus{
 	outline: none;
@@ -259,11 +260,11 @@ li a:hover{
 	background-color: var(--plus_more);
 	border-radius: 26px;
 	box-shadow: 0px 6px 12px 0px rgba(0,0,0,0.2);
-	transition: margin 0.5s ease;
+	transition: transform 0.3s ease;
 }
 #plus_symbol:hover{
 	cursor: pointer;
-	margin-left: 10px;
+	transform: translateX(10px);
 }
 .notes_container{
 	display:flex;
@@ -282,7 +283,9 @@ li a:hover{
 	height: 24px;
 	right:10px;
 	opacity: 0;
+	color: #f006!important;
 	transition: opacity 200ms ease-in;
+	font-size:30px !important;
 }
 .garbage:hover{
 	cursor:pointer;
@@ -294,7 +297,7 @@ li a:hover{
 	outline: none;
 }
 .text_box::placeholder{
-	color: rgba(38, 28, 4, 0.9);
+	color: var(--text_box_placeholder);
 }
 
 .text_box{
@@ -304,6 +307,7 @@ li a:hover{
 	height:250px;
 	border:none;
 	resize:none;
+	color:var(--text_box);
 	background:transparent;
 	white-space: pre-wrap;
 	overflow-wrap: break-word;
@@ -334,15 +338,11 @@ li a:hover{
 	color: var(--selected);
 }
 .setting{
+	color:red;
+	font-size: 30px !important;
 	visibility: hidden;
 	opacity: 0;
 	transition: opacity 0.3s ease-in;
-}
-.setting > svg{
-	position:absolute;
-	bottom: -12px;
-	height: 22px;
-	right: -15px;
 }
 .setting:hover{
 	cursor:pointer;
