--- a/calendar/calendar.css
+++ b/calendar/calendar.css
@@ -1,6 +1,160 @@
 body {
     background-color: rgb(34, 40, 48);
     font-family: Helvetica, Arial, sans-serif;
+    margin: 0;
+    overflow: hidden;
+    display: flex;
+    height: 100vh;
+    padding: 15px;
+    box-sizing: border-box;
+    gap: 20px;
+}
+
+.nav {
+    width: 110px;
+    height: 100%;
+    background: rgb(60, 68, 81);
+    border-radius: 20px;
+    overflow: hidden;
+    transition: 0.5s;
+    flex-shrink: 0;
+    box-shadow: transparent 0 0 0 3px, rgba(18, 18, 18, .1) 0 6px 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+.nav:hover {
+    width: 280px;
+}
+
+.icon {
+    width: 250px;
+    height: 60px;
+    margin-left: 25px;
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
+}
+
+.icon-img {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    border: 4px solid rgba(255, 255, 255, 0.3);
+    overflow: hidden;
+    flex-shrink: 0;
+}
+
+.icon-img img {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.icon-con {
+    margin-left: 15px;
+    opacity: 0;
+    transition: 0.5s;
+    color: rgba(255, 255, 255, 0.6);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    white-space: nowrap;
+}
+
+.icon-con p {
+    margin: 0;
+    font-size: 14px;
+}
+
+.icon-con h2 {
+    font-weight: 400;
+    margin: 0;
+    font-size: 18px;
+}
+
+.nav:hover .icon-con {
+    opacity: 1;
+}
+
+.line {
+    width: 60px;
+    height: 1px;
+    background: rgba(245, 253, 255, 0.5);
+    margin: 20px 25px;
+    transition: 0.5s;
+}
+
+.nav:hover .line {
+    width: 230px;
+}
+
+.title {
+    width: 60px;
+    margin-left: 37px;
+    margin-bottom: 20px;
+    color: rgba(255, 255, 255, 0.6);
+}
+
+.title p {
+    font-size: 14px;
+}
+
+.menu {
+    width: 230px;
+    margin-left: 25px;
+}
+
+.item {
+    display: flex;
+    position: relative;
+    transition: 0.5s;
+    border-radius: 6px;
+    color: rgba(255, 255, 255, 0.6);
+    text-decoration: none;
+}
+
+.item:hover {
+    background: rgba(255, 255, 255, 0.1);
+}
+
+.licon {
+    width: 60px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.con {
+    width: 0;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 0.5s;
+    overflow: hidden;
+    position: relative;
+    left: -20px;
+    opacity: 0;
+}
+
+.nav:hover .con {
+    width: 160px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 1;
+}
+
+.main-content {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    gap: 15px;
+    overflow: hidden;
 }
 
 .calendar-header {
@@ -11,6 +165,8 @@ body {
     padding: 2px 20px;
     font-size: 10px;
     box-shadow: transparent 0 0 0 3px, rgba(18, 18, 18, .1) 0 6px 20px;
+    min-height: 60px;
+    margin: 0;
 }
 
 .calendar-header img {
@@ -70,8 +226,10 @@ body {
 
 .calendar-page {
     display: flex;
-    padding-top: 20px;
-    height: 86vh;
+    height: 100%;
+    box-sizing: border-box;
+    overflow: hidden;
+    position: relative;
 }
 
 .reminder-panel {
@@ -80,7 +238,7 @@ body {
     width: 0px;
     background-color: rgb(60, 68, 81);
     border-radius: 12px;
-    height: 86vh;
+    height: 100%;
     padding: 0px;
     text-align: center;
     position: relative;
@@ -88,7 +246,7 @@ body {
     box-shadow: transparent 0 0 0 3px, rgba(18, 18, 18, .1) 0 6px 20px;
     max-height: 0px;
     transition: width 0.3s ease-in, max-height 0.3s ease-in;
-    color: white;
+    color: rgba(255, 255, 255, 0.6);
 }
 
 .reminder-line {
@@ -96,7 +254,7 @@ body {
     left: 0;
     right: 0;
     height: 0px;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.6);
     transition: height 0.2s ease-in;
 }
 
@@ -108,6 +266,8 @@ body {
     padding: 20px;
     box-shadow: transparent 0 0 0 3px, rgba(18, 18, 18, .1) 0 6px 20px;
     position: relative; 
+    overflow-y: auto;
+    box-sizing: border-box;
 }
 
 .week-header {
@@ -199,6 +359,13 @@ input[type="checkbox"] {
     display: inline-block;
     margin-left: 6px;
     color: black;
+}
+
+.reminder-panel-input .material-symbols-outlined {
+    vertical-align: middle; 
+    position: relative;
+    top: -1px; 
+    color:rgba(255, 255, 255, 0.6);
 }
 
 input:checked~.reminder-panel {
